added column, moved css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ p { 
+ 
+ style="color: #00ff00; background: #44cc44; border: 1px solid #00ff00; padding: 10px;
+
+}
